[package]
name = "xstatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
thiserror = "1.0"
anyhow = "1.0"
actix-web = "^4"
serde = { version = "^1", features = ["derive"] }
spaceapi = "^0.9"
log = "^0.4"
pretty_env_logger = "^0.5"
strum_macros = "^0.26"
strum = { version = "^0.26", features = ["derive"] }
validator = { version = "^0.18", features = ["derive"] }
derive_more = "^0.99"
